--- a/ZenPacks/community/VMwareESXiMonitorPython/zenpack.yaml
+++ b/ZenPacks/community/VMwareESXiMonitorPython/zenpack.yaml
@@ -15,6 +15,9 @@ device_classes:
     remove: True
     zProperties:
       zPythonClass: ZenPacks.community.VMwareESXiMonitorPython.ESXiHost
+      zCollectorPlugins: [community.cmd.VMwareESXiHostMap, community.cmd.VMwareESXiGuestMap, community.cmd.VMwareESXiDatastoreMap, community.cmd.VMwareESXiInterfaceMap]
+      zDeviceTemplates:
+        - ESXiHost    
 
     templates:
       ESXiDatastore:
@@ -33,12 +36,13 @@ device_classes:
         datasources:
           VMwareDatastore:
             type: VMware
+            #performanceSource: VMwareDatastore
+            #instance: fred
             datapoints:
               connectionStatus:
                 rrdmin: 1
                 rrdmax: 2
               diskFreeSpace: {}
-            #performanceSource: VMwareDatastore
         graphs:
           Utilization:
             units: percent
@@ -83,6 +87,7 @@ device_classes:
         datasources:
           VMwareHost:
             type: VMware
+            #performanceSource: VMwareHost
             datapoints:
               cpuReservedcapacity: {}
               cpuUsage: {}
@@ -101,7 +106,6 @@ device_classes:
               netReceived: {}
               netTransmitted: {}
               sysUpTime: {}
-            #performanceSource: VMwareHost
         graphs:
           CPU Usage:
             units: percent
@@ -235,6 +239,7 @@ device_classes:
         datasources:
           VMwareGuest:
             type: VMware
+            #performanceSource: VMwareGuest
             datapoints:
               adminStatus:
                 rrdmin: 0
@@ -250,7 +255,6 @@ device_classes:
               operStatus:
                 rrdmin: 0
                 rrdmax: 4
-            #performanceSource: VMwareGuest
         graphs:
           CPU Usage:
             units: percent
@@ -320,7 +324,7 @@ classes:
   ESXiHost:
     base: [zenpacklib.Device]
     meta_type: ESXiHost   # Will default to this but in for completeness
-    label: ESXiHost
+    label: ESXi Host
     icon:  ESXiHost   # should default to this
 
     properties:
@@ -360,7 +364,7 @@ classes:
         label: Datastore
 
   ESXiVM:
-    label: ESXiVM
+    label: ESXi VM
     meta_type: ESXiVM   # Will default to this but in for completeness
     order: 60   # display above Datastore
 
@@ -369,9 +373,11 @@ classes:
         type: string
         label: Op Sys Type
         short_label: osType
+        order: 3.1
       memory:
         type: int
         label: Memory
+        order: 3.2
       # Next 2 properties are methods defined in ESXiVM.py
       # renderers are defined in resources/VMwareESXiMonitorPython.js
       adminStatus:
@@ -379,14 +385,14 @@ classes:
         label: Admin Status
         renderer: Zenoss.render.adminStatus
         label_width: 90
-        order: 3.0
+        order: 3.3
         api_only: true
       operStatus:
         type: entity
         label: Oper Status
         renderer: Zenoss.render.operStatus
         label_width: 90
-        order: 3.1
+        order: 3.4
         api_only: true
 
     relationships:
@@ -394,7 +400,7 @@ classes:
         label: Host
 
   ESXiDatastore:
-    label: ESXiDatastore
+    label: ESXi Datastore
     meta_type: ESXiDatastore   # Will default to this but in for completeness
     order: 70   # display after VM
 
@@ -402,9 +408,11 @@ classes:
       type:
         type: string
         label: Type
+        order: 3.0
       capacity:
         type: float
         label: capacity
+        order: 3.1
         renderer: Zenoss.render.bytesString   # standard zenoss renderer
       # Next 3 properties are methods defined in ESXiDatastore.py
       # renderers are defined in resources/VMwareESXiMonitorPython.js
@@ -413,21 +421,21 @@ classes:
         label: Used Space
         renderer: Zenoss.render.used_free_space
         label_width: 90
-        order: 3.0
+        order: 3.2
         api_only: true
       freeSpace:
         type: entity
         label: Free Space
         renderer: Zenoss.render.used_free_space
         label_width: 90
-        order: 3.1
+        order: 3.3
         api_only: true
       usedPercent:
         type: entity
         label: Used Percent
         renderer: Zenoss.render.usedPercent
         label_width: 90
-        order: 3.2
+        order: 3.4
         api_only: true
         api_backendtype: method
 
