with rrd files fixed and net data

--- a/ZenPacks/community/VMwareESXiMonitorPython/zenpack.yaml
+++ b/ZenPacks/community/VMwareESXiMonitorPython/zenpack.yaml
@@ -320,6 +320,7 @@ device_classes:
 classes:
   DEFAULTS:
     base: [zenpacklib.Component]
+    #base: [NestedComponent]
 
   ESXiHost:
     base: [zenpacklib.Device]
