--- a/ZenPacks/community/VMwareESXiMonitorPython/zenpack.yaml
+++ b/ZenPacks/community/VMwareESXiMonitorPython/zenpack.yaml
@@ -15,9 +15,9 @@ device_classes:
     remove: True
     zProperties:
       zPythonClass: ZenPacks.community.VMwareESXiMonitorPython.ESXiHost
-      zCollectorPlugins: [community.cmd.VMwareESXiHostMap, community.cmd.VMwareESXiGuestMap, community.cmd.VMwareESXiDatastoreMap, community.cmd.VMwareESXiInterfaceMap]
+      zCollectorPlugins: [community.python.VMwareESXiHostMap, community.python.VMwareESXiGuestMap, community.python.VMwareESXiDatastoreMap, community.python.VMwareESXiInterfaceMap]
       zDeviceTemplates:
-        - ESXiHost    
+        - ESXiHost
 
     templates:
       ESXiDatastore:
@@ -317,6 +317,10 @@ device_classes:
                 lineType: AREA
                 legend: Disk Usage
 
+      ethernetCsmacd:
+        description: ''
+        targetPythonClass: Products.ZenModel.IpInterface
+
 classes:
   DEFAULTS:
     base: [zenpacklib.Component]
@@ -324,9 +328,9 @@ classes:
 
   ESXiHost:
     base: [zenpacklib.Device]
-    meta_type: ESXiHost   # Will default to this but in for completeness
+    meta_type: ESXiHost  # Will default to this but in for completeness
     label: ESXi Host
-    icon:  ESXiHost   # should default to this
+    icon: ESXiHost.png   # should default to this
 
     properties:
       cpuMhz:
@@ -373,8 +377,7 @@ classes:
     properties:
       osType:
         type: string
-        label: Op Sys Type
-        short_label: osType
+        label: Operating System Type
         order: 3.1
       memory:
         type: int
@@ -382,9 +385,8 @@ classes:
         order: 3.2
         renderer: Zenoss.render.bytesString   # standard zenoss renderer
       # Next 2 properties are methods defined in ESXiVM.py
-      # renderers are defined in resources/VMwareESXiMonitorPython.js
+      # renderers are defined in resources/ESXiHost.js
       adminStatus:
-        #type: entity
         type: int
         label: Admin Status
         renderer: Zenoss.render.adminStatus
@@ -394,7 +396,7 @@ classes:
         api_backendtype: method
       operStatus:
         type: int
-        label: Oper Status
+        label: Operating Status
         renderer: Zenoss.render.operStatus
         label_width: 90
         order: 3.4
@@ -417,11 +419,11 @@ classes:
         order: 3.0
       capacity:
         type: float
-        label: capacity
+        label: Capacity
         order: 3.1
         renderer: Zenoss.render.bytesString   # standard zenoss renderer
       # Next 3 properties are methods defined in ESXiDatastore.py
-      # renderers are defined in resources/VMwareESXiMonitorPython.js
+      # renderers are defined in resources/ESXiHost.js
       usedSpace:
         type: float
         label: Used Space
